<resources>
    <string name="app_name">지니마켓</string>
    <string name="title_category">카테고리</string>
    <string name="title_search">검색</string>
    <string name="title_home">홈</string>
    <string name="title_mygenie">마이지니</string>
    <string name="title_best_product">베스트상품</string>
    <string name="title_cheap_product">알뜰상품</string>
    <string name="description_flower_rose">A rose is a woody perennial flowering plant of the genus Rosa, in the family Rosaceae, or the flower it bears. There are over a hundred species and thousands of cultivars.</string>
    <string name="description_flower_carnation">Dianthus caryophyllus, the carnation or clove pink, is a species of Dianthus. It is probably native to the Mediterranean region but its exact range is unknown due to extensive cultivation for the last 2,000 years.</string>
    <string name="description_flower_tulip">Tulips form a genus of spring-blooming perennial herbaceous bulbiferous geophytes. The flowers are usually large, showy and brightly coloured, generally red yellow or white.</string>
    <string name="description_flower_daisy">Bellis perennis is a common European species of daisy, of the Asteraceae family, often considered the archetypal species of that name.</string>
    <string name="description_flower_sunflower">Helianthus or sunflower L. is a genus of plants comprising about 70 species in the family Asteraceae. The genus is one of many in the Asteraceae that are known as sunflowers.</string>
    <string name="description_flower_daffodil">Narcissus is a genus of predominantly spring perennial plants in the Amaryllidaceae family. Various common names including daffodil, daffadowndilly, narcissus, and jonquil are used to describe all or some members of the genus.</string>
    <string name="description_flower_gerbera">Gerbera L. is a genus of plants in the Asteraceae. It was named in honour of German botanist and medical doctor Traugott Gerber | who travelled extensively in Russia and was a friend of Carl Linnaeus.</string>
    <string name="description_flower_orchid">The Orchidaceae are a diverse and widespread family of flowering plants, with blooms that are often colourful and fragrant, commonly known as the orchid family. Along with the Asteraceae, they are one of the two largest families of flowering plants.</string>
    <string name="description_flower_iris">Irises are perennial plants, growing from creeping rhizomes (rhizomatous irises) or, in drier climates, from bulbs (bulbous irises). They have long, erect flowering stems which may be simple or branched, solid or hollow, and flattened or have a circular cross-section.</string>
    <string name="description_flower_lilac">Syringa is a genus of 12 currently recognized species of flowering woody plants in the olive family, native to woodland and scrub from southeastern Europe to eastern Asia, and widely and commonly cultivated in temperate areas elsewhere.</string>
    <string name="title_product_name">상품명:</string>
    <string name="title_product_price">판매가:</string>
    <string name="title_product_selling_unit">판매단위:</string>
    <string name="title_seller_name">판매자:</string>
    <string name="title_product_desc">상품상세설명:</string>
    <string name="title_purchase">구매하기</string>
    <!--At Suresoft-->
    <!--<string name="kakao_app_key">367786002717697e3d5c8bee29585f8b</string>-->
    <!--At Home-->
    <string name="kakao_app_key">dbb6beff81d6cb53bfebc539ab3a635f</string>
</resources>
